<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Scrum Application</string>
    <string name="ssa_activity_text"></string>
    <string name="description_logo">SSA</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="description_now">Go to Now</string>
    <string name="title_sprints">Sprints</string>
    <string name="title_projects">Projects</string>
    <string name="title_task">Tasks</string>
    <string name="title_users">Users</string>
    <string name="btn_projects">Projects</string>
    <string name="btn_tasks">Tasks</string>
    <string name="btn_users">Users</string>
    <string name="btn_sprints">Sprints</string>
    <string name="btn_preferences">Preferences</string>
    <string name="btn_about">About</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Remove</string>
    <string name="task_list_name">Tasks</string>
    <string name="task_new_name">New Task</string>
    <string name="task_field_summary">Summary</string>
    <string name="task_field_description">Description</string>
    <string name="task_field_estimated">Estimated</string>
    <string name="task_field_priority">Priority</string>
    <string name="task_field_beginDate">Begin Date</string>
    <string name="task_field_sprint">Sprint</string>
    <string name="task_field_user">User</string>
    <string name="task_field_status">Status</string>
    <string name="task_field_endDate">EndDate</string>
    <string name="task_field_burned">Burned</string>
    <string name="task_field_remaining">Remaining</string>
    <string name="task_field_comments">Comments</string>
    <string name="task_field_project">Project</string>
    <string name="task_label_summary">Summary</string>
    <string name="task_label_description">Description</string>
    <string name="task_label_estimated">Estimated</string>
    <string name="task_label_priority">Priority</string>
    <string name="task_label_beginDate">Begin Date</string>
    <string name="task_label_sprint">Sprint</string>
    <string name="task_label_user">User</string>
    <string name="task_label_status">Status</string>
    <string name="task_label_endDate">EndDate</string>
    <string name="task_label_burned">Burned</string>
    <string name="task_label_remaining">Remaining</string>
    <string name="task_label_comments">Comments</string>
    <string name="task_label_project">Projecdt</string>
    <string name="title_edit">Edit: \"%1$s\"</string>
    <string name="botton_save">Save</string>
    <string name="error_title">DB ERROR</string>
    <string name="error_message">The query has not results</string>
    <string name="resolve_edit">Edit task</string>
    <string name="task_information">Information</string>
    <string name="task_description">Description</string>
    <string name="empty_links">Empty Links</string>
    <string name="project_links">Links</string>
    <string name="project_information">Information</string>
    <string name="project_description">Description</string>
    <string name="project_label_opened">Created date project</string>
    <string name="project_label_started">Started date project</string>
    <string name="project_label_closed">Finished date project</string>
    <string name="project_label_company">Company</string>
    <string name="project_label_license">License</string>
    <string name="project_label_labels">Labels</string>
    <string name="associated_links">Associated links</string>

    <!-- Title string for Login activity -->
    <string name="ui_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string name="ui_activity_authenticating">Authenticating\u2026</string>
    <!-- AuthenticatorActivity -->
    <skip />
    <!-- Label above username EditText -->
    <string name="login_activity_username_label">Username</string>
    <!-- Label above password EditText -->
    <string name="login_activity_password_label">Password</string>
    <!-- Button to sign in after entering username and password -->
    <string name="login_activity_ok_button">Sign in</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A SSA account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string name="login_activity_newaccount_text">Sign in to your Simple Scrum Application account. </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string name="sign_in_button_label">Sign in</string>
    <!-- Button for going to the previous screen or step -->
    <string name="back_button_label">Back</string>
    <!-- Button to cancel the current operation -->
    <string name="cancel_button_label">Cancel</string>
    <string name="provider_description">Contains project, tasks, sprints and users data.</string>
    <string name="provider_label">scrum data</string>

    <!-- String for preferences -->
    <string name="server_preferences">Server settings</string>
    <string name="title_alternative_ip_preference">Server IP</string>
    <string name="sumary_alternative_ip_preference">Alternative server IP</string>
    <string name="dialog_title_alternative_ip_preference">Enter alternative IP address</string>
    <string name="default_alternative_ip_preference">home.bacamt.com</string>
    <string name="title_alternative_port_preference">Port</string>
    <string name="sumary_alternative_port_preference">Alternative TCP server port</string>
    <string name="dialog_title_alternative_port_preference">Enter alternative port number</string>
    <string name="default_alternative_port_preference">83</string>
    <string name="title_synchronize_preference">Synchronization time</string>
    <string name="sumary_synchronize_preference">Minimum synchronization time</string>
    <string name="dialog_title_synchronize_preference">Enter minimum synchronization time (sg)</string>
    <string name="default_synchronize_preference">1</string>
    <string name="title_update_before_edit_preference">Update before edit</string>
    <string name="sumary_update_before_edit_preference">Force update before data edit</string>
    <string name="default_update_before_edit_preference">true</string>
    <string name="unit_type1">Days</string>
    <string name="unit_type2">Hours</string>
    <string name="unit_code_type1">d</string>
    <string name="unit_code_type2">h</string>
    <string name="tasks_preferences">Task settings</string>
    <string name="title_units_preference">Estimation units</string>
    <string name="sumary_units_preference">Units type for estimation</string>
    <string name="dialog_title_units_preference">Enter estimation unit</string>
    <string name="default_units_preference">d</string>
    <string name="title_max_tasks_preference">Tasks per sprint</string>
    <string name="sumary_max_tasks_preference">Maximum number of tasks per sprint</string>
    <string name="dialog_title_max_tasks_preference">Enter maximum number of tasks per sprint</string>
    <string name="default_max_tasks_preference">150</string>

    <!-- Strings for about -->
    <string name="member_ibaca">Ignacio Baca Moreno</string>
    <string name="desc_ibaca">Application Architecture and Test</string>
    <string name="member_jsbaes">Jesús S. Barriga Antonio</string>
    <string name="desc_jsbaes">Views and Content Provider</string>
    <string name="member_juanan">Juan Antonio Cobo Zamora</string>
    <string name="desc_juanan">Views and Content Provider</string>
    <string name="member_jrovillano">Jesús Ruiz Oliva</string>
    <string name="desc_jrovillano">Views and Content Provider</string>
    <string name="member_nobody"></string>
    <string name="desc_nobody"></string>

</resources>