<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_1"
        android:orientation="vertical" >

        <TextView
            style="@style/about_title"
            android:text="@string/app_name" />

        <TextView
            style="@style/about_member"
            android:text="@string/member_ibaca" />

        <TextView
            style="@style/about_description"
            android:text="@string/desc_ibaca" />
        
        <TextView
            style="@style/about_member"
            android:text="@string/member_jsbaes" />

        <TextView
            style="@style/about_description"
            android:text="@string/desc_jsbaes" />

        <TextView
            style="@style/about_member"
            android:text="@string/member_juanan" />

        <TextView
            style="@style/about_description"
            android:text="@string/desc_juanan" />

        <TextView
            style="@style/about_member"
            android:text="@string/member_jrovillano" />

        <TextView
            style="@style/about_description"
            android:text="@string/desc_jrovillano" />

        <TextView
            style="@style/about_member"
            android:text="@string/member_nobody" />

        <TextView
            style="@style/about_description"
            android:text="@string/desc_nobody" />
        
        <TextView
            style="@style/about_member"
            android:text="@string/member_nobody" />
                
        <TextView
            style="@style/about_description"
            android:text="@string/desc_nobody" />

    </LinearLayout>

</ScrollView>