<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_new_name" />

    <EditText
        android:id="@+id/txtSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_field_summary" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_field_description" />

    <EditText
        android:id="@+id/txtEstimated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_field_estimated" />

    <EditText
        android:id="@+id/txtBeginDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_field_beginDate" />

    <EditText
        android:id="@+id/txtPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_field_priority" />

    <Button
        android:id="@+id/cmdSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botton_save" />

</LinearLayout>