<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header_task"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/body_padding_medium"
            android:paddingLeft="@dimen/body_padding_large"
            android:paddingRight="@dimen/body_padding_large"
            android:paddingTop="@dimen/body_padding_medium" >

            <TextView
                android:id="@+id/lblCaptionSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/task_label_summary" />

            <EditText
                android:id="@+id/txtSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionSummary"
                android:hint="@string/task_field_summary" />

            <TextView
                android:id="@+id/lblCaptionDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtSummary"
                android:text="@string/task_label_description" />

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionDescription"
                android:hint="@string/task_field_description" />

            <TextView
                android:id="@+id/lblCaptionEstimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtDescription"
                android:text="@string/task_label_estimated" />

            <EditText
                android:id="@+id/txtEstimated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionEstimated"
                android:hint="@string/task_field_estimated" />

            <TextView
                android:id="@+id/lblCaptionPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtEstimated"
                android:text="@string/task_label_priority" />

            <EditText
                android:id="@+id/txtPrioriry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionPriority"
                android:hint="@string/task_field_priority" />

            <TextView
                android:id="@+id/lblCaptionSprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtPriority"
                android:text="@string/task_label_sprint" />

            <EditText
                android:id="@+id/txtSprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionSprint"
                android:hint="@string/task_field_sprint" />

            <TextView
                android:id="@+id/lblCaptionUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtSprint"
                android:text="@string/task_label_user" />

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionUser"
                android:hint="@string/task_field_user" />

            <TextView
                android:id="@+id/lblCaptionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtUser"
                android:text="@string/task_label_status" />

            <EditText
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionStatus"
                android:hint="@string/task_field_status" />

            <TextView
                android:id="@+id/lblCaptionBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtStatus"
                android:text="@string/task_label_beginDate" />

            <EditText
                android:id="@+id/txtBeginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionBeginDate"
                android:hint="@string/task_field_beginDate" />

            <TextView
                android:id="@+id/lblCaptionEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtBeginDate"
                android:text="@string/task_label_endDate" />

            <EditText
                android:id="@+id/txtEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionEndDate"
                android:hint="@string/task_field_endDate" />

            <TextView
                android:id="@+id/lblCaptionBurned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtEndDate"
                android:text="@string/task_label_burned" />

            <EditText
                android:id="@+id/txtBurned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionBurned"
                android:hint="@string/task_field_burned" />

            <TextView
                android:id="@+id/lblCaptionRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtBurned"
                android:text="@string/task_label_remaining" />

            <EditText
                android:id="@+id/txtRemaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionRemaining"
                android:hint="@string/task_field_remaining" />

            <TextView
                android:id="@+id/lblCaptionComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtRemaining"
                android:text="@string/task_label_comments" />

            <EditText
                android:id="@+id/txtComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCaptionComments"
                android:hint="@string/task_field_comments" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>