<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_session"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/body_padding_medium"
        android:paddingLeft="@dimen/body_padding_large"
        android:paddingRight="@dimen/body_padding_large"
        android:paddingTop="@dimen/body_padding_medium" android:background="@drawable/gradient_bg">

        <TextView
            android:id="@+id/detail_title"
            style="@style/TextHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />
        
        <TextView
            android:id="@+id/detail_subtitle"
            style="@style/TextHeaderSub"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/detail_title" />
        
        <Button
            android:id="@+id/task_btn_user"
            style="@style/DashboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="15dip"
            android:layout_below="@+id/detail_subtitle"
            android:drawableTop="@drawable/small_btn_users"
            android:text="@string/btn_users" />

        <Button
            android:id="@+id/task_btn_project"
            style="@style/DashboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_subtitle"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dip"
            android:drawableTop="@drawable/small_btn_projects"
            android:text="@string/btn_projects" />

        <Button
            android:id="@+id/task_btn_sprint"
            style="@style/DashboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="15dip"
            android:layout_below="@+id/detail_subtitle"
            android:drawableTop="@drawable/small_btn_sprints"
            android:text="@string/btn_sprints" />

    </RelativeLayout>

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient_bg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#e7e7e8" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.43" >

                <include
                    android:id="@+id/tab_task_description"
                    layout="@layout/tab_task_description" />

                <include
                    android:id="@+id/tab_task_information"
                    layout="@layout/tab_task_information" />
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>